<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:focusableInTouchMode="true">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textSize="18dp"
              android:textAlignment="center"
              android:text="@string/setting_parameter"
              android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
        <EditText android:id="@+id/edtx_tale" android:hint="@string/setting_tale" android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
        <EditText android:id="@+id/edtx_description" android:hint="@string/setting_description"
                  android:layout_width="match_parent" android:layout_height="wrap_content" android:lines="2"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
        <EditText android:id="@+id/edtx_remark" android:hint="@string/setting_remark"
                  android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:id="@+id/tv_latlng" android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textAlignment="center"
              android:text="$LanLng"
              android:textStyle="italic"/>
    <Button android:id="@+id/btn_pin" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/setting_pin"
            android:layout_marginTop="16dp"/>
</LinearLayout>