<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".presentation.main.MainActivity">


    <TextView
            android:id="@+id/tv_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rb_distance_beat" app:layout_constraintVertical_bias="0.949"/>

    <TextView
            android:id="@+id/tv_tale"
            android:text="@string/common_loading"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
    />
    <TextView
            android:id="@+id/tv_description"
            android:text="@string/common_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_tale" android:layout_marginTop="24dp"/>
    <TextView
            android:id="@+id/tv_distance"
            android:text="@string/common_loading"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:gravity="center"
            android:textSize="8dp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/common_visited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_visited" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_distance" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.498"/>

    <com.skyfishjy.library.RippleBackground
            android:id="@+id/rb_distance_beat"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_visited"
            app:rb_color="#0099CC"
            app:rb_radius="32dp"
            app:rb_rippleAmount="4"
            app:rb_duration="3000"
            app:rb_scale="3" app:layout_constraintHorizontal_bias="0.495" android:layout_marginTop="12dp">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/ic_launcher_round" android:layout_centerHorizontal="true"
                   android:layout_centerVertical="true"/>
    </com.skyfishjy.library.RippleBackground>

</androidx.constraintlayout.widget.ConstraintLayout>